--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,18 @@
 /*  your css code here. If applicable */
+.card{
+	width:200px;
+	padding:10px;
+	background-color:gray;
+	   box-shadow: 5px 5px 5px black;
+	text-align:center;
+}
+.img{
+	width:100px;
+}
+.btn{
+	padding:10px;
+	background-color:red;
+	color:white;
+	border-radius:5px;
+	border:none;
+}
